k8s-files/services/ingress/nginx-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-demo-ingress
  namespace: k8s-demo
  labels:
    name: k8s-demo-ingress
  annotations: # 注意需要添加
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx # 注意需要添加
  rules:
  - host: k8sdemo.com
    http:
      paths:
      - pathType: Prefix
        path: "/ping"
        backend:
          service:
            name: k8s-demo
            port: 
              number: 8081
